--- a/kdatabinding/build.gradle
+++ b/kdatabinding/build.gradle
@@ -38,7 +38,7 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     implementation 'com.android.support:design:27.1.1'
-
+    implementation "android.arch.lifecycle:extensions:1.1.1"
     kapt "com.android.databinding:compiler:3.1.3"
 
     testImplementation 'junit:junit:4.12'
